# pyFU

./: LICENSE  README.md  liege.fits  morisot.yaml  pyfu_bin_links.sh  pyproject.toml  requirements.txt  setup.py
pyFU/: __init__.py  alles.py  barebones.py  calib.py  defaults.py  display.py  extract.py  fake.py  flat.py  galsub.py  ifu.py  image.py  lamp.py  meta.py  mgauss.py  oldfake.py  pyfu_tool.py  rebin.py  retrace.py  solar.py  trace.py  utils.py  wavcal.py
