[tool.poetry]
name = "pyFU"
packages = [{ include = "pyFU" }]
version = "0.1.0"
description = ""
authors = ["Frederiv V. Hessman", "Tim-Oliver Husser <thusser@uni-goettingen.de>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
astropy = "^6.0.0"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
parse = "^1.20.0"
scipy = "^1.11.4"
scikit-image = "^0.19.2"
PyQt5 = "5.14.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ifubb = "pyFU.barebones:main"
ifucal = "pyFU.calib:main"
ifudis = "pyFU.display:main"
ifuext = "pyFU.extract:main"
ifufak = "pyFU.fake:main"
ifuima = "pyFU.image:main"
ifulam = "pyFU.lamp:main"
ifureb = "pyFU.rebin:main"
ifusol = "pyFU.solar:main"
ifutra = "pyFU.trace:main"
ifuwav = "pyFU.wavcal:main"
ifutool = "pyFU.pyfu_tool:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
